@@ -4,6 +4,7 @@
 * Fixed a bug in {date_format} that prevented anything but unix timestamps to
   work
 * {literal} and {strip} now follow the LooseOpeningsHandling setting
+* Fixed complex variables (i.e. {$_root[$c[$x.0]].0}) parsing bugs
 
 [2008-05-10] 0.9.0
 ! BC Break: changed all class names to be PEAR compliant (aka use underscores
